--- a/src/popup.css
+++ b/src/popup.css
@@ -21,7 +21,7 @@ body {
     color: #002654;
 }
 
-.timer {
+#timer {
     color: #aa0000;
     font-size: 36px;
     margin-top: 20px;
@@ -45,21 +45,13 @@ body {
     opacity: 0.9;
 }
 
-#start-button,
-#stop-button {
+#start-button {
     background: linear-gradient(rgb(245 52 0) 2.9%, rgb(159 10 1) 94.81%);
     border: 1px solid rgb(183 11 0);
 }
 
-#pause-button,
-#resume-button {
-    background: linear-gradient(rgb(215 215 215) 2.9%, rgb(56 56 56) 94.81%);
-    border: 1px solid rgb(137 137 137);
-    margin-left: 10px;
-}
-
-#stop-button,
-#pause-button,
-#resume-button {
+#stop-button {
     display: none;
+    background: linear-gradient(rgb(195 0 0) 2.9%, rgb(106 0 0) 94.81%);
+    border: 1px solid rgb(149 9 1);
 }
